# kaonashi

./: .gitignore  Anchor.toml  Cargo.toml  README.md  parecer.txt
kaonashi-api/: Cargo.toml  README.md
kaonashi-api/data/: pending_votes.json  voted_decades.json
kaonashi-api/src/: auth.rs  ballots.rs  batches.rs  blockchain.rs  handler.rs  keeping_votes.rs  lib.rs  merkle.rs  models.rs  movies.rs  zk_verify.rs
kaonashi-api/test-ledger/: genesis.tar.bz2  snapshot-100-GKZzCx6MdXCGhfXF56GWbAsC9hRcE5uTWDnRHHrC5uXY.tar.zst  snapshot-200-HvWcGta2zgbBkB15MCHXQDSNFC1yD6oMj1DhkFT8JZQj.tar.zst
kaonashi-api/test-wallets/: voter_01_keypair64.json  voter_01_secret32.json  voter_02_keypair64.json  voter_02_secret32.json  voter_03_keypair64.json  voter_03_secret32.json  voter_04_keypair64.json  (+14 more)
kaonashi-smart-contract/: .gitignore  Anchor.toml  Cargo.toml
kaonashi-smart-contract/zk-client/: Cargo.toml
kaonashi-smart-contract/zk-client/src/: crypto.rs  lib.rs  rollups.rs  solana_client.rs
kaonashi-smart-contract/zk-client/tests/: client_tests.rs
kaonashi_frontend/: .gitignore  Cargo.toml  README.md  index.html  style.css
kaonashi_frontend/src/: app.rs  lib.rs  main.rs
kaonashi_frontend/src/api/: client.rs
kaonashi_frontend/src/components/: navbar.rs
kaonashi_frontend/src/crypto/: mod.rs  vote_crypto.rs  wallet_signature.rs  zk_vote.rs
kaonashi_frontend/src/models/: dto.rs
kaonashi_frontend/src/pages/: chairperson.rs  decades.rs  home.rs  mod.rs  results.rs  tie_resolution.rs  vote.rs  wallet.rs
rust-tests/: Cargo.toml  owner_project.rs
tests/: kaonashi.ts
(+37 files in other folders)
