[package]
name = "kaonashi_frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
console_error_panic_hook = "0.1"

gloo-net = "0.6"
serde = { version = "1", features = ["derive"] }
wasm-bindgen-futures = "0.4"

ed25519-dalek = "2.2"
hex = "0.4"
bs58 = "0.5"
sha2 = "0.10"
solana-zk-sdk = "6.0.1"
curve25519-dalek = "4"
rand_core = "0.6"
web-sys = { version = "0.3", features = ["Window", "Storage"] }

futures = { version = "0.3", default-features = false, features = ["alloc"] }
imp = "0.1.0"
getrandom02 = { package = "getrandom", version = "0.2.17", features = ["js"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
solana-sdk = "4.0.1"
merlin = "3"
